# Curves

./: CMakeLists.txt
curve_app/: CMakeLists.txt  main.cpp
curve_app/include/: CurveManager.h
curve_app/src/: CurveManager.cpp
curve_library/: CMakeLists.txt
curve_library/include/: Circle.h  Curve.h  Ellipse.h  Helix.h
curve_library/src/: Circle.cpp  Ellipse.cpp  Helix.cpp
